# twitter-bot

./: Cargo.toml  README.md  notes.md  rust-learn.md
src/: api.rs  api_result.rs  error.rs  lib.rs  main.rs
src/api/: base.rs  mod.rs  tweets.rs  with_user_ctx.rs
src/auth/: mod.rs  oauth2.rs
src/data/: entity.rs  geo.rs  mod.rs  tweet.rs  user.rs  withheld.rs
src/id/: numeric.rs  string.rs
src/requests/: stream_rule.rs  tweet.rs
src/utils/: lib.rs  mod.rs
