[package]
name = "tweet-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
figlet-rs = "0.1.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenv = "0.15"
oauth1-request = "0.6.1"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
twitter-v2 = "0.1.8"
egg-mode = "0.16.1"
oauth2 = "5.0.0"
url = "2.5.4"
tracing-subscriber = "0.3.19"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["trace"] }
serde = { version = "1.0.219", features = ["derive"] }
